tests/snapshots/errors/index_assign_type_error.mc
let arr: array<int> = [1, 2, 3];
arr[0] = "hello";
